feat: add pub/sub support
